--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
     <meta property="og:title" content="Feels Go Real - Your Emotional Growth Journey" />
     <meta property="og:description" content="Navigate your emotions through 5 zones and track your growth" />
